image error fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,7 @@
             <div class="maghny-gd-1 card col-lg-6">
                 <div class="maghny-grid">
                     <figure class="effect-lily">
-                        <img class="img-fluid" src="/assets/roomimages/upload-3334806443.png" alt="">
+                        <img class="img-fluid" src="https://roomvio.s3.ap-south-1.amazonaws.com/assets/roomimages/upload-287688631.png                  " alt="">
                         <figcaption class="w3set-hny">
                             <div>
                                 <h4 class="top-text">Luxury Hotel and Best Resort
