--- a/templates/bookingForm.html
+++ b/templates/bookingForm.html
@@ -98,16 +98,16 @@
                                     </ol>
                                     <div class="carousel-inner">
                                       <div class="carousel-item active">
-                                        <img class="img-fluid" style="height: 55vh; width: 100%;" src="/{{ .Rm.HotelImage1 }}" alt="">
+                                        <img class="img-fluid" style="height: 55vh; width: 100%;" src="{{ .Rm.HotelImage1 }}" alt="">
                                       </div>
                                       <div class="carousel-item">
-                                        <img class="img-fluid" style="height: 55vh; width: 100%;" src="/{{ .Rm.HotelImage2 }}" alt="">
+                                        <img class="img-fluid" style="height: 55vh; width: 100%;" src="{{ .Rm.HotelImage2 }}" alt="">
                                       </div>
                                       <div class="carousel-item">
-                                        <img class="img-fluid" style="height: 55vh; width: 100%;" src="/{{ .Rm.HotelImage3 }}" alt="">
+                                        <img class="img-fluid" style="height: 55vh; width: 100%;" src="{{ .Rm.HotelImage3 }}" alt="">
                                       </div>
                                       <div class="carousel-item">
-                                        <img class="img-fluid" style="height: 55vh; width: 100%;" src="/{{ .Rm.HotelImage4 }}" alt="">
+                                        <img class="img-fluid" style="height: 55vh; width: 100%;" src="{{ .Rm.HotelImage4 }}" alt="">
                                       </div>
                                     </div>
                                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -141,16 +141,16 @@
                                   </ol>
                                   <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                      <img class="img-fluid" style="height: 55vh; width: 100%;" src="/{{ .Rm.RoomImage1 }}" alt="">
+                                      <img class="img-fluid" style="height: 55vh; width: 100%;" src="{{ .Rm.RoomImage1 }}" alt="">
                                     </div>
                                     <div class="carousel-item">
-                                      <img class="img-fluid" style="height: 55vh; width: 100%;" src="/{{ .Rm.RoomImage2 }}" alt="">
+                                      <img class="img-fluid" style="height: 55vh; width: 100%;" src="{{ .Rm.RoomImage2 }}" alt="">
                                     </div>
                                     <div class="carousel-item">
-                                      <img class="img-fluid" style="height: 55vh; width: 100%;" src="/{{ .Rm.RoomImage3 }}" alt="">
+                                      <img class="img-fluid" style="height: 55vh; width: 100%;" src="{{ .Rm.RoomImage3 }}" alt="">
                                     </div>
                                     <div class="carousel-item">
-                                      <img class="img-fluid" style="height: 55vh; width: 100%;" src="/{{ .Rm.RoomImage4 }}" alt="">
+                                      <img class="img-fluid" style="height: 55vh; width: 100%;" src="{{ .Rm.RoomImage4 }}" alt="">
                                     </div>
                                   </div>
                                   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
