some error fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -175,8 +175,8 @@
 				<a href="/showRoomsToUser" class="btn btn-style btn-primary mt-sm-5 mt-4">Show Rooms</a>
 			</div>
 			<div class="col-lg-6 about-right position-relative mt-lg-0 mt-5">
-				<img src="/assets/hotelsImages/upload-78371821.png" alt="" class="img-fluid img-border mt-4" />
-				<img src="/assets/hotelsImages/upload-1055552994.png" alt="" class="img-fluid position-absolute img-position" />
+				<img src="https://roomvio.s3.ap-south-1.amazonaws.com/assets/hotelsImages/upload-1627567899.png               " alt="" class="img-fluid img-border mt-4" />
+				<img src="https://roomvio.s3.ap-south-1.amazonaws.com/assets/hotelsImages/upload-1916702750.png               " alt="" class="img-fluid position-absolute img-position" />
 			</div>
 		</div>
 	</div>
